[project]
name = "mtgg-unet-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.5.0",
    "netcdf4>=1.5.8",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "torch>=1.12.0",
    "tqdm>=4.62.0",
    "xarray>=2022.0.0",
]
